@@ -196,7 +196,7 @@ contains
     !*FD Calculates the ice temperature, according to one
     !*FD of several alternative methods.
 
-    use glimmer_utils, only: hsum4,tridag
+    use glimmer_utils, only: hsum4,tridiag
     use glimmer_global, only : dp
     use paramets,       only : thk0
     use glide_velo
@@ -374,11 +374,11 @@ contains
                 
                 prevtemp = model%temper%temp(:,ew,ns)
 
-                call tridag(subd(2:model%general%upn), &
+                call tridiag(subd(1:model%general%upn), &
                      diag(1:model%general%upn), &
-                     supd(1:model%general%upn-1), &
-                     rhsd(1:model%general%upn), &
-                     model%temper%temp(1:model%general%upn,ew,ns))
+                     supd(1:model%general%upn), &
+                     model%temper%temp(1:model%general%upn,ew,ns), &
+                     rhsd(1:model%general%upn))
 
                 call corrpmpt(model%temper%temp(:,ew,ns),model%geometry%thck(ew,ns),model%temper%bwat(ew,ns), &
                      model%numerics%sigma,model%general%upn)
@@ -417,11 +417,11 @@ contains
 
                    prevtemp = model%temper%temp(:,ew,ns)
 
-                   call tridag(subd(2:model%general%upn), &
+                   call tridiag(subd(1:model%general%upn), &
                         diag(1:model%general%upn), &
-                        supd(1:model%general%upn-1), &
-                        rhsd(1:model%general%upn), &
-                        model%temper%temp(1:model%general%upn,ew,ns))
+                        supd(1:model%general%upn), &
+                        model%temper%temp(1:model%general%upn,ew,ns), &
+                        rhsd(1:model%general%upn))
 
                    call corrpmpt(model%temper%temp(:,ew,ns),model%geometry%thck(ew,ns),model%temper%bwat(ew,ns), &
                         model%numerics%sigma,model%general%upn)
